# fragbench

./: .dockerignore  .gitignore  Dockerfile  Makefile  Makefrag  PROMPTSTEAL_WORKFLOW.md  README.md  SCOPECREEP_PLAN.md  attack_picker.py  attack_runner.py  attack_success.py  attack_sysprompt1.txt  attack_sysprompt2.txt  calllog.py  detector.py  docker-compose.yml  expr-list.txt  gen_campaign.py  generator.py  harness.py  plan.md  pyproject.toml  run.py  test-MCP-qwen122b.sh  test.py  test220.sh
attacks/: ad_discovery.toml  coinbait.toml  dprk_fraud.toml  generated_ai_phishing_0.toml  generated_ai_phishing_1.toml  generated_ai_phishing_2.toml  generated_ai_phishing_3.toml  generated_ai_phishing_4.toml  generated_clickfix_via_ai_chat_0.toml  generated_clickfix_via_ai_chat_1.toml  generated_clickfix_via_ai_chat_2.toml  generated_clickfix_via_ai_chat_3.toml  generated_clickfix_via_ai_chat_4.toml  generated_deepfake_id_fraud_0.toml  generated_deepfake_id_fraud_1.toml  generated_deepfake_id_fraud_10.toml  generated_deepfake_id_fraud_11.toml  generated_deepfake_id_fraud_12.toml  generated_deepfake_id_fraud_13.toml  generated_deepfake_id_fraud_14.toml  generated_deepfake_id_fraud_15.toml  generated_deepfake_id_fraud_16.toml  generated_deepfake_id_fraud_17.toml  generated_deepfake_id_fraud_18.toml  generated_deepfake_id_fraud_19.toml  generated_deepfake_id_fraud_2.toml  generated_deepfake_id_fraud_20.toml  generated_deepfake_id_fraud_21.toml  generated_deepfake_id_fraud_22.toml  generated_deepfake_id_fraud_23.toml  generated_deepfake_id_fraud_24.toml  (+313 more)
docs/: croissant.json  (+4 more)
(+304 files in other folders)
