[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fragbench"
version = "0.1.0"
description = "Attack prompt variation harness with kill-chain detection"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "openai>=1.0",
]

[project.scripts]
fragbench = "run:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fragbench*"]
